# SorceryTheGame

./: CMakeLists.txt  Components.h  Constants.h  EntityComponentSystem.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  README.md  TextureManager.cpp  TextureManager.h  main.cpp
assets/: warrior.pyxel
